# sumo-rl-ego

./: .gitignore  README.md  launcher.sh  pyproject.toml  requirements.txt  setup.sh  test_env.py  test_sumo.py
configs/: config.py
env/: done.py  ego_vehicle.py  observation.py  reward.py  simulation.py  sumo_env.py
examples/: custom_env.py  evaluate_policy.py  make_env.py  train_with_sb3.py
experiments/: config_utils.py  debug_gui.py  eval.py  finetune.py  play.py  train.py  wandb_costum_callbacks.py
experiments/configs/: dqn.yaml  dqn_highway.yaml  eval.yaml  finetuning_config.yaml  my_policy_highway.yaml  play.yaml  policy_config.yaml  ppo_highway.yaml  train.yaml  train_config.yaml
experiments/dqn_highway/: debug_gui.py  train.py
experiments/modules/: my_callback.py  my_ego.py  my_kpi.py  my_metrics.py  my_observation.py  my_observation_v2.py  my_observation_v3.py  my_observation_v4.py  my_reward.py
experiments/policies/: base_policy.py  my_policy.py  sb3_policy.py
experiments/rollout/: debug_gui.py
experiments/testing/: debug_gui.py  test.py
experiments/training/: train.py
experiments/utils/: config_utils.py
models/.hydra/: config.yaml  (+1 more)
rl_utils/: config_loader.py  model_factory.py  trainer.py
scripts/: test_env.py  test_sumo_read_ego_speed.py
sumo_env/: env.py
sumo_gym_ego/: __init__.py
sumo_rl_ego/: __init__.py
test_rl/: train_DQN copy.py  train_DQN.py
tests/: test_entrypoint_support.py  test_env.py  test_env_gui.py  test_experiment_entrypoints.py  test_public_api.py  test_rollout.py  test_sumo.py  test_wandb,py  test_wandb.py
(+288 files in other folders)
