[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sumo-rl-ego"
version = "0.1.0"
description = "SUMO RL environment for ego vehicle"
authors = [
    {name = "Riccardo Venturelli"}
]
dependencies = [
    "gymnasium",
    "numpy",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[tool.setuptools.packages.find]
where = ["."]