[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumo-rl-ego"
version = "0.1.0"
description = "Framework for training RL agents on SUMO ego environments"
requires-python = ">=3.9"
dependencies = [
    "gymnasium",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sumo_gym_ego*", "sumo_rl_ego*"]